--- a/public/404.html
+++ b/public/404.html
@@ -2,16 +2,17 @@
 <html>
 <head>
   <meta charset='utf-8' >
-  <title>Технические работы на Stereo-Shop.ru</title>
+  <title>Страница не найдена на Stereo-Shop.ru</title>
 </head>
 
 <body>
   <div style='text-align:center;font-family:SANS-SERIF'>
     <br><br><br><br><br><br>
-    <h1>На сайте проводятся технические работы</h1>
-    <p>Пожалуйста, загляните к нам через несколько минут</p>
+    <h1>Данная страница не найдена на сайте stereo-shop.ru</h1>
+    <p>Пожалуйста, вернитесь на <a href='http://stereo-shop.ru'>главную</a> и поищите что-то другое</p>
     <img src='http://zykin-ilya.ru/images/logos/logo_w130_h130.png'>
     <p>stereo-shop.ru</p>
+    <div style='opacity:0.001'><img src='http://stereo-shop.ru/detect_404'></div>
   </div>
 </body>
 </html>
