--- a/public/500.html
+++ b/public/500.html
@@ -12,6 +12,7 @@
     <p>Пожалуйста, загляните к нам через несколько минут</p>
     <img src='http://zykin-ilya.ru/images/logos/logo_w130_h130.png'>
     <p>stereo-shop.ru</p>
+    <div style='opacity:0.001'><img src='http://stereo-shop.ru/detect_404'></div>
   </div>
 </body>
 </html>
