--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
     <p>Пожалуйста, вернитесь на <a href='http://stereo-shop.ru'>главную</a> и поищите что-то другое</p>
     <img src='http://zykin-ilya.ru/images/logos/logo_w130_h130.png'>
     <p>stereo-shop.ru</p>
-    <div style='opacity:0.001'><img src='http://stereo-shop.ru/detect_404'></div>
+    <div style='opacity:0.001'><img src='/detect_404'></div>
   </div>
 </body>
 </html>
